Добавляет общий контейнер для центровки и отступов на главную страницу и страницу каталога

--- a/index.html
+++ b/index.html
@@ -71,123 +71,125 @@
 			</div>
 		</header>
 		<main class="container main-container">
-			<h1 class="visual-hidden">Магазин Глейси</h1>
-			<section class="slider">
-				<ul class="slider-list">
-					<li class="slider-list-item slider-list-item-raspberry">
-						<h3>Крем-брюле и пломбир с малиновым джемом</h3>
-						<img src="img/slider-raspberry.png" width="1045" height="881" alt="Фото мороженого крем-брюле и пломбира с малиновым джемом">
-						<a class="button button-slider" href="#">Давайте оба!</a>
-					</li>
-					<li class="slider-list-item slider-list-item-lemon">
-						<h3>Шоколадный пломбир и лимонный сорбет</h3>
-						<img src="img/slider-lemon.png" width="1065" height="859" alt="Фото мороженого шоколадный пломбир и лемонного сорбета">
-						<a class="button button-slider" href="#">Давайте оба!</a>
-					</li>
-					<li class="slider-list-item slider-list-item-strawberry">
-						<h3>Пломбир с помадкой и клубничный щербет</h3>
-						<img src="img/slider-strawberry.png" width="1079" height="854" alt="Фото мороженого пломбир с помадкой и слубничного щербета">
-						<a class="button button-slider" href="#">Давайте оба!</a>
-					</li>
-				</ul>
-				<ul class="slider-toggle-list">
-					<li>
-						<label class="visual-hidden slider-toggle-item" for="slider-toggle-raspberry">Первый слайд</label>
-						<input id="slider-toggle-raspberry" type="radio" name="toggle-raspberry" checked>
-					</li>
-					<li>
-						<label class="visual-hidden  slider-toggle-item" for="slider-toggle-lemon">Второй слайд</label>
-						<input id="slider-toggle-lemon" type="radio" name="toggle-lemon">		
-					</li>
-					<li>
-						<label class="visual-hidden  slider-toggle-item" for="slider-toggle-strawberry">Третий слайд</label>
-						<input id="slider-toggle-strawberry" type="radio" name="toggle-strawberry">		
-					</li>
-				</ul>
-			</section>
-			<section class="banners">
-				<h2 class="visual-hidden">Акции</h2>
-				<ul class="banners-list">
-					<li class="banners-item banners-item-raspberry">
-						<h3>Малинка даром!</h3>
-						<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-						<a class="button" href="#">Хочу варенье!</a>
-					</li>
-					<li class="banners-item banners-item-choco">
-						<h3>Шоколадки даром!</h3>
-						<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-						<a class="button" href="#">Хочу шоколадки!</a>
-					</li>
-				</ul>
-			</section>
-			<section class="hits">
-				<h2 class="visual-hidden">Хиты продаж</h2>
-				<ul class="hits-list">
-					<li class="hits-item">
-						<h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
-						<b>310₽</b>
-						<span>/кг</span>
-						<img src="img/icecream-orange.jpg" width="267" height="267" alt="Фото сливочного мороженого с апельсиновым джемом и цитрусовой стружкой">
-						<a class="button" href="#">Быстрый просмотр</a>
-					</li>
-					<li class="hits-item">
-						<h3>Сливочно-кофейное с кусочками шоколада</h3>
-						<b>380₽</b>
-						<span>/кг</span>
-						<img src="img/icecream-coffee.jpg" width="267" height="267" alt="Фото сливочно-кофейного мороженого с кусочками шоколада">
-						<a class="button" href="#">Быстрый просмотр</a>
-					</li>
-					<li class="hits-item">
-						<h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
-						<b>355₽</b>
-						<span>/кг</span>
-						<img src="img/icecream-white.jpg" width="267" height="267" alt="Фото сливочно-клубничного мороженого с присыпкой из белого шоколада">
-						<a class="button" href="#">Быстрый просмотр</a>
-					</li>
-					<li class="hits-item">
-						<h3>Сливочное крем-брюле с карамельной подливкой</h3>
-						<b>415₽</b>
-						<span>/кг</span>
-						<img src="img/icecream-brulee.jpg" width="267" height="267" alt="Фото сливочного мороженого крем-брюле с карамельной подливкой">
-						<a class="button" href="#">Быстрый просмотр</a>
-					</li>
-				</ul>
-			</section>
-			<section class="features">
-				<h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
-				<ul class="features-list">
-					<li class="features-item features-item-technology">
-						<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-					</li>
-					<li class="features-item features-item-ecology">
-						<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
-					</li>
-					<li class="features-item features-item-contract">
-						<p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-					</li>
-					<li class="features-item features-item-thermo">
-						<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
-					</li>
-				</ul>
-			</section>
-			<div class="container row-container">
-				<article class="blog-news">
-					<a class="blog-news-link" href="#"><h3>10 способов сервировки фруктовых щербетов к столу</h3></a>
-					<p>Новое в нашем блоге</p>
-				</article>
-				<section class="subscribe">
-					<div class="subscribe-front">
-						<h2 class="visual-hidden">Подписка на рассылку</h2>
-						<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-						<form class="form form-subscribe" action="https://echo.htmlacademy.ru" method="post">
-							<p>
-								<label class="visual-hidden" for="subscribe-email">Введите электронную почту</label>
-								<input id="subscribe-email" type="email" name="email" placeholder="Электронная почта">
-							</p>
-						<button class="button" type="submit">Отправить</button>
-						</form>
-					</div>
+			<div class="big-container">
+				<h1 class="visual-hidden">Магазин Глейси</h1>
+				<section class="slider">
+					<ul class="slider-list">
+						<li class="slider-list-item slider-list-item-raspberry">
+							<h3>Крем-брюле и пломбир с малиновым джемом</h3>
+							<img src="img/slider-raspberry.png" width="1045" height="881" alt="Фото мороженого крем-брюле и пломбира с малиновым джемом">
+							<a class="button button-slider" href="#">Давайте оба!</a>
+						</li>
+						<li class="slider-list-item slider-list-item-lemon">
+							<h3>Шоколадный пломбир и лимонный сорбет</h3>
+							<img src="img/slider-lemon.png" width="1065" height="859" alt="Фото мороженого шоколадный пломбир и лемонного сорбета">
+							<a class="button button-slider" href="#">Давайте оба!</a>
+						</li>
+						<li class="slider-list-item slider-list-item-strawberry">
+							<h3>Пломбир с помадкой и клубничный щербет</h3>
+							<img src="img/slider-strawberry.png" width="1079" height="854" alt="Фото мороженого пломбир с помадкой и слубничного щербета">
+							<a class="button button-slider" href="#">Давайте оба!</a>
+						</li>
+					</ul>
+					<ul class="slider-toggle-list">
+						<li>
+							<label class="visual-hidden slider-toggle-item" for="slider-toggle-raspberry">Первый слайд</label>
+							<input id="slider-toggle-raspberry" type="radio" name="toggle-raspberry" checked>
+						</li>
+						<li>
+							<label class="visual-hidden  slider-toggle-item" for="slider-toggle-lemon">Второй слайд</label>
+							<input id="slider-toggle-lemon" type="radio" name="toggle-lemon">		
+						</li>
+						<li>
+							<label class="visual-hidden  slider-toggle-item" for="slider-toggle-strawberry">Третий слайд</label>
+							<input id="slider-toggle-strawberry" type="radio" name="toggle-strawberry">		
+						</li>
+					</ul>
 				</section>
+				<section class="banners">
+					<h2 class="visual-hidden">Акции</h2>
+					<ul class="banners-list">
+						<li class="banners-item banners-item-raspberry">
+							<h3>Малинка даром!</h3>
+							<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+							<a class="button" href="#">Хочу варенье!</a>
+						</li>
+						<li class="banners-item banners-item-choco">
+							<h3>Шоколадки даром!</h3>
+							<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+							<a class="button" href="#">Хочу шоколадки!</a>
+						</li>
+					</ul>
+				</section>
+				<section class="hits">
+					<h2 class="visual-hidden">Хиты продаж</h2>
+					<ul class="hits-list">
+						<li class="hits-item">
+							<h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+							<b>310₽</b>
+							<span>/кг</span>
+							<img src="img/icecream-orange.jpg" width="267" height="267" alt="Фото сливочного мороженого с апельсиновым джемом и цитрусовой стружкой">
+							<a class="button" href="#">Быстрый просмотр</a>
+						</li>
+						<li class="hits-item">
+							<h3>Сливочно-кофейное с кусочками шоколада</h3>
+							<b>380₽</b>
+							<span>/кг</span>
+							<img src="img/icecream-coffee.jpg" width="267" height="267" alt="Фото сливочно-кофейного мороженого с кусочками шоколада">
+							<a class="button" href="#">Быстрый просмотр</a>
+						</li>
+						<li class="hits-item">
+							<h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+							<b>355₽</b>
+							<span>/кг</span>
+							<img src="img/icecream-white.jpg" width="267" height="267" alt="Фото сливочно-клубничного мороженого с присыпкой из белого шоколада">
+							<a class="button" href="#">Быстрый просмотр</a>
+						</li>
+						<li class="hits-item">
+							<h3>Сливочное крем-брюле с карамельной подливкой</h3>
+							<b>415₽</b>
+							<span>/кг</span>
+							<img src="img/icecream-brulee.jpg" width="267" height="267" alt="Фото сливочного мороженого крем-брюле с карамельной подливкой">
+							<a class="button" href="#">Быстрый просмотр</a>
+						</li>
+					</ul>
+				</section>
+				<section class="features">
+					<h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+					<ul class="features-list">
+						<li class="features-item features-item-technology">
+							<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+						</li>
+						<li class="features-item features-item-ecology">
+							<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+						</li>
+						<li class="features-item features-item-contract">
+							<p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+						</li>
+						<li class="features-item features-item-thermo">
+							<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+						</li>
+					</ul>
+				</section>
+				<div class="container row-container">
+					<article class="blog-news">
+						<a class="blog-news-link" href="#"><h3>10 способов сервировки фруктовых щербетов к столу</h3></a>
+						<p>Новое в нашем блоге</p>
+					</article>
+					<section class="subscribe">
+						<div class="subscribe-front">
+							<h2 class="visual-hidden">Подписка на рассылку</h2>
+							<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+							<form class="form form-subscribe" action="https://echo.htmlacademy.ru" method="post">
+								<p>
+									<label class="visual-hidden" for="subscribe-email">Введите электронную почту</label>
+									<input id="subscribe-email" type="email" name="email" placeholder="Электронная почта">
+								</p>
+							<button class="button" type="submit">Отправить</button>
+							</form>
+						</div>
+					</section>
+				</div>
 			</div>
 			<section class="contacts">
 				<h2 class="visual-hidden">Как добраться</h2>
