Исправлена раскладка карты на главной странице

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<header class="main-header">
 			<div class="container-header">	
 				<nav class="main-navigation">
-					<div class="container navigation-container">
+					<div class="navigation-container">
 						<img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси">
 						<ul class="site-navigation">
 							<li class="site-navigation-item">
@@ -28,7 +28,7 @@
 							<li class="site-navigation-item"><a href="#">О Компании</a></li>
 						</ul>
 					</div>
-					<div class="container navigation-container">
+					<div class="navigation-container">
 						<div class="menu-search">
 							<div class="sub-menu menu-search-sub">
 								<form class="visual-hidden from form-search" action="https://echo.htmlacademy.ru" method="post">
@@ -70,8 +70,8 @@
 				</p>
 			</div>
 		</header>
-		<main class="container main-container">
-			<div class="big-container">
+		<main>
+			<div class="main-container">
 				<h1 class="visual-hidden">Магазин Глейси</h1>
 				<section class="slider">
 					<ul class="slider-list">
@@ -171,7 +171,7 @@
 						</li>
 					</ul>
 				</section>
-				<div class="container row-container">
+				<div class="row-container">
 					<article class="blog-news">
 						<a class="blog-news-link" href="#"><h3>10 способов сервировки фруктовых щербетов к столу</h3></a>
 						<p>Новое в нашем блоге</p>
@@ -194,19 +194,21 @@
 			<section class="contacts">
 				<h2 class="visual-hidden">Как добраться</h2>
 				<img class="map" src="img/map.jpg" width="1200" height="428" alt="Ул. Большая Конюшенная 19/8 Санкт Питербург">
-				<div class="feedback">
-					<p class="feedback-address">
-						Адрес главного офиса<br>
-						и офлайн-магазина:<br>
-						<b>ул. Большая Конюшенная</b><br>
-						<b>19/8, Санкт-Петербург</b>
-					</p>
-					<p class="feedback-phone">
-						Для заказов по телефону:<br>
-						<b>8 812 450-25-25</b><br>
-						(с 10 до 20 ежедневно)
-					</p>
-					<a class="button" href="#">Форма обратной связи</a>
+				<div class="main-container contacts-container">	
+					<div class="feedback">
+						<p class="feedback-address">
+							Адрес главного офиса<br>
+							и офлайн-магазина:<br>
+							<b>ул. Большая Конюшенная</b><br>
+							<b>19/8, Санкт-Петербург</b>
+						</p>
+						<p class="feedback-phone">
+							Для заказов по телефону:<br>
+							<b>8 812 450-25-25</b><br>
+							(с 10 до 20 ежедневно)
+						</p>
+						<a class="button" href="#">Форма обратной связи</a>
+					</div>
 				</div>
 			</section>
 		</main>
