Исправляет раскладку новостей в блоге на главной странице

--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
 					</ul>
 				</section>
 				<div class="row-container">
-					<article class="blog-news">
+					<article class="blog-news row-container-item">
 						<a class="blog-news-link" href="#"><h3>10 способов сервировки фруктовых щербетов к столу</h3></a>
 						<p>Новое в нашем блоге</p>
 					</article>
-					<section class="subscribe">
+					<section class="subscribe  row-container-item">
 						<div class="subscribe-front">
 							<h2 class="visual-hidden">Подписка на рассылку</h2>
 							<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
