Исправляет раскладку цены в карточках товаров и добавляет внутренние отступы в кнопках на всем сайте

--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
 					<ul class="slider-list">
 						<li class="slider-list-item slider-list-item-raspberry">
 							<h3>Крем-брюле и пломбир с малиновым джемом</h3>
-							<img src="img/slider-raspberry.png" width="1045" height="881" alt="Фото мороженого крем-брюле и пломбира с малиновым джемом">
 							<a class="button button-slider" href="#">Давайте оба!</a>
 						</li>
 						<li class="slider-list-item slider-list-item-lemon">
@@ -106,6 +105,7 @@
 						</li>
 					</ul>
 				</section>
+
 				<section class="banners">
 					<h2 class="visual-hidden">Акции</h2>
 					<ul class="banners-list">
@@ -126,29 +126,37 @@
 					<ul class="hits-list">
 						<li class="hits-item">
 							<h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
-							<b>310₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>310₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecream-orange.jpg" width="267" height="267" alt="Фото сливочного мороженого с апельсиновым джемом и цитрусовой стружкой">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
 							<h3>Сливочно-кофейное с кусочками шоколада</h3>
-							<b>380₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>380₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecream-coffee.jpg" width="267" height="267" alt="Фото сливочно-кофейного мороженого с кусочками шоколада">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
 							<h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
-							<b>355₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>355₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecream-white.jpg" width="267" height="267" alt="Фото сливочно-клубничного мороженого с присыпкой из белого шоколада">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
 							<h3>Сливочное крем-брюле с карамельной подливкой</h3>
-							<b>415₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>415₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecream-brulee.jpg" width="267" height="267" alt="Фото сливочного мороженого крем-брюле с карамельной подливкой">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
