--- a/catalog.html
+++ b/catalog.html
@@ -11,11 +11,18 @@
 		<header class="main-header">
 			<div class="container-header">	
 				<nav class="main-navigation">
-					<div class="container navigation-container">
-						<img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси">
+					<div class="navigation-container">
+						<a href="index.html"><img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси"></a>
 						<ul class="site-navigation">
 							<li class="site-navigation-item">
 								<a class="site-navigation-catalog" href="#">Каталог</a>
+								<ul class="visual-hidden site-navigation-sub">
+									<li><a href="#"><b>Новинки</b></a></li>
+									<li><a href="catalog.html">Сливочное</a></li>
+									<li><a href="#">Щербеты</a></li>
+									<li><a href="#">Фруктовый лед</a></li>
+									<li><a href="#">Мелорин</a></li>
+								</ul>
 							</li>
 							<li class="site-navigation-item"><a href="#">Доставка и оплата</a></li>
 							<li class="site-navigation-item"><a href="#">О Компании</a></li>
@@ -173,87 +180,111 @@
 					<ul class="catalog-list">
 						<li class="hits-item">
 							<h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
-							<b>310₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>310₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecream-orange.jpg" width="267" height="267" alt="Фото сливочного мороженого с апельсиновым джемом и цитрусовой стружкой">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
 							<h3>Сливочно-кофейное с кусочками шоколада</h3>
-							<b>380₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>380₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecream-coffee.jpg" width="267" height="267" alt="Фото сливочно-кофейного мороженого с кусочками шоколада">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
 							<h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
-							<b>355₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>355₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecream-white.jpg" width="267" height="267" alt="Фото сливочно-клубничного мороженого с присыпкой из белого шоколада">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
 							<h3>Сливочное крем-брюле с карамельной подливкой</h3>
-							<b>415₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>415₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecream-brulee.jpg" width="267" height="267" alt="Фото сливочного мороженого крем-брюле с карамельной подливкой">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<!-------------------------------- конец 1 ряда -------------------------------->
 						<li class="hits-item">
 							<h3>Сливочное с брусничным джемом</h3>
-							<b>325₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>325₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecream-cowberry.jpg" width="267" height="267" alt="Фото сливочного мороженого с брусничным джемом">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
 							<h3>Сливочно-черничное с цельными ягодами черники</h3>
-							<b>410₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>410₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecraem-blueberries.jpg" width="267" height="267" alt="Фото сливочно-черничного мороженого с цельными ягодами черники">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
 							<h3>Сливочно-лимонное с карамельной присыпкой</h3>
-							<b>375₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>375₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecream-lemon.jpg" width="267" height="267" alt="Фото сливочно-лимонного мороженого с карамельной присыпкой">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
 							<h3>Сливочное с шоколадной стружкой</h3>
-							<b>320₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>320₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecream-choco.jpg" width="267" height="267" alt="Фото сливочного мороженого с шоколадной стружкой">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<!-------------------------------- конец 2 ряда -------------------------------->
 						<li class="hits-item">
 							<h3>Сливочно-ванильное с кусочками шоколада</h3>
-							<b>440₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>440₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecream-vanilla.jpg" width="267" height="267" alt="Фото сливочно-ванильного мороженого с кусочками шоколада">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
 							<h3>Сливочного с ментоловым сиропом</h3>
-							<b>435₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>435₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecream-menthol.jpg" width="267" height="267" alt="Фото сливочного мороженого с ментоловым сиропом">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
 							<h3>Сливочное с кусочками черного шоколада</h3>
-							<b>355₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>355₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecream-black.jpg" width="267" height="267" alt="Фото сливочного мороженого с кусочками черного шоколада">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
 						<li class="hits-item">
 							<h3>Сливочное с мятным сиропом</h3>
-							<b>420₽</b>
-							<span>/кг</span>
+							<div class="hits-item-price">
+								<b>420₽</b>
+								<span>/кг</span>
+							</div>
 							<img src="img/icecream-mint.jpg" width="267" height="267" alt="Фото сливочного мороженого с мятным сиропом">
 							<a class="button" href="#">Быстрый просмотр</a>
 						</li>
