Избавляет от лишних контейнеров для раскладки

--- a/catalog.html
+++ b/catalog.html
@@ -28,7 +28,7 @@
 							<li class="site-navigation-item"><a href="#">О Компании</a></li>
 						</ul>
 					</div>
-					<div class="container navigation-container">
+					<div class="navigation-container">
 						<div class="menu-search">
 							<div class="sub-menu menu-search-sub">
 								<form class="visual-hidden from form-search" action="https://echo.htmlacademy.ru" method="post">
