--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			</div>
 		</header>
 		<main>
-			<div class="main-container">
+			<div class="container">
 				<h1 class="visual-hidden">Магазин Глейси</h1>
 				<section class="slider">
 					<ul class="slider-list">
@@ -202,7 +202,7 @@
 			<section class="contacts">
 				<h2 class="visual-hidden">Как добраться</h2>
 				<img class="map" src="img/map.jpg" width="1200" height="428" alt="Ул. Большая Конюшенная 19/8 Санкт Питербург">
-				<div class="main-container contacts-container">	
+				<div class="container contacts-container">	
 					<div class="feedback">
 						<p class="feedback-address">
 							Адрес главного офиса<br>
