Добавляет эффект при наведении на кнопки шапки сайта

--- a/catalog.html
+++ b/catalog.html
@@ -28,7 +28,7 @@
 							<li class="site-navigation-item"><a href="#">О Компании</a></li>
 						</ul>
 					</div>
-					<div class="navigation-container">
+					<div class="navigation-container user-menu">
 						<div class="menu-search">
 							<div class="sub-menu menu-search-sub">
 								<form class="visual-hidden from form-search" action="https://echo.htmlacademy.ru" method="post">
@@ -59,7 +59,7 @@
 							</div>
 						</div>
 						<div class="menu-cart">
-							<a class="menu-item menu-item-cart menu-item-cart-full" href="#">Корзина</a>
+							<a class="menu-item menu-item-cart menu-item-cart-full" href="#">2 товара</a>
 							<div class="sub-menu menu-cart-sub">
 								<table class="cart-table">
 									<tr class="cart-table-item">
