Исправляет главный контейнер на всем сайте

--- a/index.html
+++ b/index.html
@@ -73,34 +73,32 @@
 				<div class="container">
 					<h1 class="visual-hidden">Магазин Глейси</h1>
 					<section class="slider">
+						<ul class="slider-toggle-list">
+							<li>
+								<input class="visual-hidden" id="product-1" type="radio" name="toggle-raspberry" checked>
+								<label class=" slider-toggle-item" for="product-1">Первый слайд</label>
+							</li>
+							<li>
+								<input class="visual-hidden" id="product-2" type="radio" name="toggle-lemon">
+								<label class="  slider-toggle-item" for="product-2">Второй слайд</label>
+							</li>
+							<li>
+								<input class="visual-hidden" id="product-3" type="radio" name="toggle-strawberry">
+								<label class="  slider-toggle-item" for="product-3">Третий слайд</label>		
+							</li>
+						</ul>
 						<ul class="slider-list">
-							<li class="slider-list-item slider-list-item-raspberry">
+							<li class="slider-list-item slider-list-item-raspberry" id="slide-1">
 								<h3>Крем-брюле и пломбир с малиновым джемом</h3>
 								<a class="button button-slider" href="#">Давайте оба!</a>
 							</li>
-							<li class="slider-list-item slider-list-item-lemon">
+							<li class="slider-list-item slider-list-item-lemon" id="slide-2">
 								<h3>Шоколадный пломбир и лимонный сорбет</h3>
-								<img src="img/slider-lemon.png" width="1065" height="859" alt="Фото мороженого шоколадный пломбир и лемонного сорбета">
 								<a class="button button-slider" href="#">Давайте оба!</a>
 							</li>
-							<li class="slider-list-item slider-list-item-strawberry">
+							<li class="slider-list-item slider-list-item-strawberry" id="slide-3">
 								<h3>Пломбир с помадкой и клубничный щербет</h3>
-								<img src="img/slider-strawberry.png" width="1079" height="854" alt="Фото мороженого пломбир с помадкой и слубничного щербета">
 								<a class="button button-slider" href="#">Давайте оба!</a>
-							</li>
-						</ul>
-						<ul class="slider-toggle-list">
-							<li>
-								<label class="visual-hidden slider-toggle-item" for="slider-toggle-raspberry">Первый слайд</label>
-								<input id="slider-toggle-raspberry" type="radio" name="toggle-raspberry" checked>
-							</li>
-							<li>
-								<label class="visual-hidden  slider-toggle-item" for="slider-toggle-lemon">Второй слайд</label>
-								<input id="slider-toggle-lemon" type="radio" name="toggle-lemon">		
-							</li>
-							<li>
-								<label class="visual-hidden  slider-toggle-item" for="slider-toggle-strawberry">Третий слайд</label>
-								<input id="slider-toggle-strawberry" type="radio" name="toggle-strawberry">		
 							</li>
 						</ul>
 					</section>
