Оформляет форму цены на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -113,7 +113,7 @@
 						</fieldset>
 
 						<fieldset class="filters-item filters-item-price">
-							<legend>Цена 100 руб. - 500 руб.</legend>
+							<legend>Цена: 100 руб. – 500 руб.</legend>
 							<div class="filter-item-price-scale">
 								<div class="scale">
 									<div class="bar"></div>
